--- a/templates/users.html
+++ b/templates/users.html
@@ -35,37 +35,11 @@
                 <td>
                     <div class="action-links">
                         <a href="{{ url_for('users_bp.user_form', user_id=user.id) }}" class="icon-btn" title="Edit"><i class="fas fa-edit"></i></a>
-                        <button class="delete-btn icon-btn" onclick="showDeleteModal({{ user.id }})" title="Delete"><i class="fas fa-trash-alt"></i></button>
+                        <button class="delete-btn icon-btn" onclick="openDeleteModal('{{ url_for('users_bp.delete_user', user_id=user.id) }}', 'user')" title="Delete"><i class="fas fa-trash-alt"></i></button>
                     </div>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-
-    <div id="deleteModal" class="modal">
-        <div class="modal-content">
-            <p>Are you sure you want to delete this user?</p>
-            <div class="modal-buttons">
-                <button onclick="hideDeleteModal()" class="button">Cancel</button>
-                <form id="deleteForm" method="POST" style="display:inline;">
-                    <button type="submit" class="button delete-btn">Delete</button>
-                </form>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        var modal = document.getElementById("deleteModal");
-        var deleteForm = document.getElementById("deleteForm");
-
-        function showDeleteModal(userId) {
-            deleteForm.action = "/user/delete/" + userId;
-            modal.style.display = "flex";
-        }
-
-        function hideDeleteModal() {
-            modal.style.display = "none";
-        }
-    </script>
 {% endblock %}
