Implemented the logics for Next Project and Completed Levels

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,7 @@
 
 {% include '_delete_modal.html' %}
 <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 <script src="{{ url_for('static', filename='js/search.js') }}"></script>
 
 <script>
