--- a/templates/_contact_modal.html
+++ b/templates/_contact_modal.html
@@ -33,8 +33,8 @@
                             <option value="Persuasive Influence">Persuasive Influence</option>
                             <option value="Presentation Mastery">Presentation Mastery</option>
                             <option value="Visionary Communication">Visionary Communication</option>
-                            <option value="Non-Path: Distinguished Toastmaster">Non-Path: Distinguished Toastmaster</option>
-                            <option value="Non-Path: Other">Non-Path: Other</option>
+                            <option value="Distinguished Toastmaster">Non-Path: Distinguished Toastmaster</option>
+                            <option value="Other">Non-Path: Other</option>
                         </select>
                     </td>
                 </tr>
