adjusted the drag & drop behavior for better user experience

--- a/static/css/agenda.css
+++ b/static/css/agenda.css
@@ -93,8 +93,8 @@
     cursor: grabbing;
 }
 
-.draggable-row {
-    cursor: grab;
+.drag-handle {
+    cursor: move;
 }
 
 .draggable-row:grabbing {
