addded support to GE style (instant/delayed)

--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -157,6 +157,15 @@
                             </select>
                         </td>
                     </tr>
+                    <tr>
+                        <td><label for="ge_style">GE Style:</label></td>
+                        <td>
+                            <select id="ge_style" name="ge_style" required>
+                                <option value="instant" selected>Instant</option>
+                                <option value="delayed">Delayed</option>
+                            </select>
+                        </td>
+                    </tr>
                 </table>
                 <div class="form-actions">
                     <button type="submit" class="btn btn-primary">Create Meeting</button>
