--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/agenda.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/speech_logs.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/pathway_library.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/settings.css') }}">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
 
@@ -65,6 +66,12 @@
                 <a href="{{ url_for('users_bp.show_users') }}">
                     <i class="fas fa-users-cog nav-icon"></i>
                     <span>User Management</span>
+                </a>
+            </li>
+            <li class="{% if request.endpoint and request.endpoint.startswith('settings_bp') %}active{% endif %}">
+                <a href="{{ url_for('settings_bp.settings') }}">
+                    <i class="fas fa-cog nav-icon"></i>
+                    <span>Settings</span>
                 </a>
             </li>
             {% endif %}
